improvements made to file structure
