# dto/task_request.go
@@ -1,0 +1,7 @@
+package dto
+
+type TaskRequest struct {
+	Title       string `json:"title"`
+	Description string `json:"description"`
+	Status      string `json:"status" enum:"TODO,DOING,DONE"`
+}
